--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20.x
+          cache: 'yarn'
 
       - name: Run install
         uses: borales/actions-yarn@v5
