--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,24 +2,24 @@ name: CI
 on: [push]
 
 jobs:
-  build:
-    name: Test All Solutions
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+    build:
+        name: Test All Solutions
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20.x
-          cache: 'yarn'
+            - name: Setup Node.js
+              uses: actions/setup-node@v3
+              with:
+                  node-version: 20.x
+                  cache: "yarn"
 
-      - name: Run install
-        uses: borales/actions-yarn@v5
-        with:
-          cmd: install # will run `yarn install` command
+            - name: Run install
+              uses: borales/actions-yarn@v5
+              with:
+                  cmd: install # will run `yarn install` command
 
-      - name: Test solutions
-        uses: borales/actions-yarn@v4
-        with:
-          cmd: test # will run `yarn test` command
+            - name: Test solutions
+              uses: borales/actions-yarn@v4
+              with:
+                  cmd: test # will run `yarn test` command
