--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,25 +1,41 @@
 name: CI
-on: [push]
+on: [ push ]
+
+env:
+  CARGO_TERM_COLOR: always
 
 jobs:
-    build:
-        name: Test All Solutions
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
+  ts-test:
+    name: Test Typescript Solutions
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-            - name: Setup Node.js
-              uses: actions/setup-node@v3
-              with:
-                  node-version: 20.x
-                  cache: "yarn"
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.x
+          cache: "yarn"
 
-            - name: Run install
-              uses: borales/actions-yarn@v5
-              with:
-                  cmd: install # will run `yarn install` command
+      - name: Run install
+        uses: borales/actions-yarn@v5
+        with:
+          cmd: install # will run `yarn install` command
 
-            - name: Test solutions
-              uses: borales/actions-yarn@v4
-              with:
-                  cmd: test # will run `yarn test` command
+      - name: Test solutions
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: test # will run `yarn test` command
+  rust-test:
+    name: Test Rust Solutions
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        toolchain:
+          - stable
+          # - beta
+          # - nightly
+    steps:
+      - uses: actions/checkout@v4
+      - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      - run: cargo test --verbose
