feat: rust solution

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,13 +29,7 @@ jobs:
   rust-test:
     name: Test Rust Solutions
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        toolchain:
-          - stable
-          # - beta
-          # - nightly
     steps:
       - uses: actions/checkout@v4
-      - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      - run: rustup update stable && rustup default stable
       - run: cargo test --verbose
